--- a/web/WEB-INF/pages/common/menu_new.vm
+++ b/web/WEB-INF/pages/common/menu_new.vm
@@ -1,12 +1,12 @@
 <td width="199" height="500" valign="top" bgcolor="#93B1D7">
 <script language="JavaScript" src="/scripts/menu.js"></script>
 
-<link rel="stylesheet" href="css/jquery.treeview.css"/>
-<link rel="stylesheet" href="css/screen.css"/>
+<link rel="stylesheet" href="/css/jquery.treeview.css"/>
+<link rel="stylesheet" href="/css/screen.css"/>
 
-<script src="scripts/jquery.js" type="text/javascript"></script>
-<script src="scripts/jquery.cookie.js" type="text/javascript"></script>
-<script src="scripts/jquery.treeview.js" type="text/javascript"></script>
+<script src="/scripts/jquery.js" type="text/javascript"></script>
+<script src="/scripts/jquery.cookie.js" type="text/javascript"></script>
+<script src="/scripts/jquery.treeview.js" type="text/javascript"></script>
 
 <script>
 
