--- a/trunk/web/WEB-INF/pages/common/menu_new.vm
+++ b/trunk/web/WEB-INF/pages/common/menu_new.vm
@@ -310,7 +310,7 @@
 
                     #if($infosort1.type==2)
                             <span class="file"><a
-                                    href="/file/actions.html?method=list&oc=all&infoSortId=$vMUtils.encrypt($!infosort1.id)&statuses=$vMUtils.encrypt(0)&cm=da$index1">$!infosort1.name</a></span>
+                                    href="/file/actions.html?method=list&oc=all&infoSortIds=$vMUtils.encrypt($!infosort1.id)&statuses=$vMUtils.encrypt(0)&cm=da$index1">$!infosort1.name</a></span>
                     #else
                     <span class="folder">$!infosort1.name</span>
                     #end
