--- a/trunk/web/WEB-INF/pages/file/list.vm
+++ b/trunk/web/WEB-INF/pages/file/list.vm
@@ -18,7 +18,7 @@
                 <td></td>				
                 <td>
 <table width="100%" border="0" cellpadding="0" cellspacing="0">
-		<form name="searchForm" method="post" action="/file/actions.html?method=list&oc=all&infoSortId=$vMUtils.encrypt($infoSortId)&statuses=$vMUtils.encrypt($status)&cm=$cm"> 
+		<form name="searchForm" method="post" action="/file/actions.html?method=list&oc=all&infoSortIds=$vMUtils.encrypt($infoSortId)&statuses=$vMUtils.encrypt($status)&cm=$cm"> 
 			<input type = hidden name="searchAction" value=y>
 			<tr>
 				<td>
@@ -317,8 +317,8 @@
 								<a href="/file/actions.html?method=insert&parInfoSortIds=$vMUtils.encrypt($file.id)&infoSortIds=$vMUtils.encrypt($infoSortId)&statuses=$vMUtils.encrypt(1)&cm=$cm">新增$!infoSort.twoFloor</a>
 								<a href="/file/actions.html?method=list&parInfoSortIds=$vMUtils.encrypt($file.id)&infoSortIds=$vMUtils.encrypt($infoSortId)&statuses=$vMUtils.encrypt(1)&cm=$cm">显示第二层</a>
 							#end
-							<a href="/file/actions.html?method=update&sid=$vMUtils.encrypt($file.id)&parInfoSortIds=$vMUtils.encrypt($file.id)&infoSortIds=$vMUtils.encrypt($infoSortId)&statuses=$vMUtils.encrypt(1)&cm=$cm"  >编辑</a>
-							<a href="/file/actions.html?method=delete&sid=$vMUtils.encrypt($file.id)&infoSortIds=$vMUtils.encrypt($infoSortId)&statuses=$vMUtils.encrypt(1)&cm=$cm"  >删除</a>
+							<a href="/file/actions.html?method=update&sid=$vMUtils.encrypt($file.id)&parInfoSortIds=$vMUtils.encrypt($file.id)&infoSortIds=$vMUtils.encrypt($infoSortId)&statuses=$vMUtils.encrypt(0)&cm=$cm"  >编辑</a>
+							<a href="/file/actions.html?method=delete&sid=$vMUtils.encrypt($file.id)&infoSortIds=$vMUtils.encrypt($infoSortId)&statuses=$vMUtils.encrypt(0)&cm=$cm"  >删除</a>
 							#if($member.type==0)
 								<a href="/accessory/actions.html?method=insert&fileIds=$vMUtils.encrypt($file.id)&cm=$cm"  >原文</a>
 							#end
